src/objects/Calendar_View__c.object
<CustomObject>
    <fields>
        <fullName>Calendar_Setting__c</fullName>
        <label>Calendar Setting</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Distributor_Settings__c</fullName>
        <label>Distributor Settings</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Filter_Query__c</fullName>
        <label>Filter Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>User</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Perspective</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Calendar_Views</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>View_Name__c</fullName>
        <defaultValue>&quot;Default View&quot;</defaultValue>
        <label>View Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Calendar View</label>
    <nameField>
        <label>Calendar View Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendar Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>